--- a/fundraiser-meter/package.json
+++ b/fundraiser-meter/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "code-test",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.2",
+    "morgan": "^1.8.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
