--- a/fundraiser-meter/package.json
+++ b/fundraiser-meter/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.15.2",
+    "mongoose": "^4.9.1",
     "morgan": "^1.8.1"
   },
   "devDependencies": {},
