--- a/fundraiser-meter/package.json
+++ b/fundraiser-meter/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "gulp": "^3.9.1",
     "mongoose": "^4.9.1",
     "morgan": "^1.8.1"
   },
