--- a/fundraiser-meter/bower.json
+++ b/fundraiser-meter/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.6.3"
+    "angular": "^1.6.3",
+    "angular-resource": "^1.6.3"
   }
 }
