--- a/docker/get_started_node/package.json
+++ b/docker/get_started_node/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "db:table": "node ./create-table"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
