--- a/docker/get_started_node/docker-compose.yml
+++ b/docker/get_started_node/docker-compose.yml
@@ -1,8 +1,20 @@
 version: "3"
 services:
+  nginx:
+    image: nginx
+    restart: on-failure
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    # makes nginx container aware of web container. name_in_compose:name_in_web
+    links:
+      - web:web
+    ports:
+    # internal:external
+    - "80:80"
   web:
     # replace username/repo:tag with your name and image details
     image: jackhkmatthews/get-started-node:part2
+    restart: on-failure
     environment:
       - DB_HOST=db
     ports:
@@ -17,6 +29,7 @@ services:
     command: sh -c './wait-for db:5432 -- npm start'
   db:
     image: postgres
+    restart: on-failure
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
